# CellCounter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_main.yml
src/cellcounter/: ImageBundle.py  __init__.py  analysis.py  extraction.py  preprocessing.py  stardist_model.py  utils.py
tests/: test_analysis.py  test_extraction.py  test_preprocessing.py  test_stardist_model.py  test_utils.py
tests/data/: A2_10_patch.tiff  A2_spot2.csv  A2runrun.geojson  IOU_compare2.csv  adata_img.h5ad  adata_no_img.h5ad  annotate2.csv  clahe_image_test_cropped.npy  details_big_up_A2_10.npz  extracted2.csv  he_labels_A2_10.tiff  histo_eq_image_test_cropped.npy  laplacian_test_cropped.npy  normalized_image_test_cropped.npy  spot_coords.csv  stardist_run_test.csv  unsharp_masking_test_cropped.npy
